--- a/scss/_responsive.scss
+++ b/scss/_responsive.scss
@@ -140,7 +140,7 @@
 	/* Recent Update Area css
 	============================================================================================ */
 	.recent_update_area {
-		padding: 80px 0;
+		padding: 20px 0;
 		background-image: none;
 		background-color: #fcf8ff;
 	}
